--- a/index.html
+++ b/index.html
@@ -2,19 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="My first webpage, with JavaScript" />
+    <meta name="description" content="User Input, with JavaScript" />
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="Mr. Coxall" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
-    <link
-      rel="stylesheet"
-      href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css"
-    />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
@@ -27,8 +18,8 @@
       rel="stylesheet"
       href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css"
     />
-    <link rel="stylesheet" href="./css/style.css" />
-    <title>My first webpage, with a JS file</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>User Input, with a JS</title>
   </head>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
@@ -36,17 +27,41 @@
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">Hello, World!, with JS</span>
+          <span class="mdl-layout-title">User Input, with a JS</span>
         </div>
       </header>
       <main class="mdl-layout__content">
+        <h3>Please enter the following:</h3>
+        <!-- Simple Textfield -->
+        <!-- Numeic Textfield -->
+        <form action="#">
+          <p>Street number</p>
+          <div class="mdl-textfield mdl-js-textfield">
+            <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="number-entered">
+            <label class="mdl-textfield__label" for="number-entered">Street number here ...</label>
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+        </form>
+        <!-- Numeic Textfield -->
+        <form action="#">
+          <p>Street Name</p>
+          <div class="mdl-textfield mdl-js-textfield">
+            <input class="mdl-textfield__input" type="text" id="street-name">
+            <label class="mdl-textfield__label" for="first-name">Street name here ...</label>
+          </div>
+        <!-- Raised button with ripple -->
         <button
           class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
-          onclick="myButtonClicked()"
+          onclick="enterClicked()"
         >
-          Say "Hello, World!"
+          Enter
         </button>
-        <div id="hello-world"></div>
+        <br>
+        <br>
+        <br>
+        <div id="user-info">
+          <div id="address"></div>
+        </div>
       </main>
     </div>
   </body>
