--- a/index.html
+++ b/index.html
@@ -33,22 +33,21 @@
       <main class="mdl-layout__content">
         <h3>Please enter the following:</h3>
         <!-- Simple Textfield -->
-        <!-- Numeic Textfield -->
         <form action="#">
           <p>Street number</p>
           <div class="mdl-textfield mdl-js-textfield">
-            <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="number-entered">
-            <label class="mdl-textfield__label" for="number-entered">Street number here ...</label>
-            <span class="mdl-textfield__error">Input is not a number!</span>
+            <input class="mdl-textfield__input" type="text" id="street-number">
+            <label class="mdl-textfield__label" for="street-number">Street number here ...</label>
           </div>
         </form>
-        <!-- Numeic Textfield -->
+        <!-- Numeric Textfield -->
         <form action="#">
-          <p>Street Name</p>
-          <div class="mdl-textfield mdl-js-textfield">
+          <p>Street name</p>
+       <div class="mdl-textfield mdl-js-textfield">
             <input class="mdl-textfield__input" type="text" id="street-name">
-            <label class="mdl-textfield__label" for="first-name">Street name here ...</label>
+            <label class="mdl-textfield__label" for="street-name">Street name here ...</label>
           </div>
+        </form>
         <!-- Raised button with ripple -->
         <button
           class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
